--- a/README.textile
+++ b/README.textile
@@ -1,57 +1,1 @@
-Emacs enviroment with extensions and customizations for a Ruby On Rails developer.
-
-h1. Extensions
-
-h2. IDO (Interactive Do Things)
-
-For fast file access
-"Doc":http://www.emacswiki.org/emacs/InteractivelyDoThings
-"Video":http://www.youtube.com/watch?v=lsgPNVIMkIE
-
-h2. Magit
-
-Git controll version system frontend.
-"Doc":http://www.emacswiki.org/emacs/Magit
-"Video":http://peepcode.com/products/meet-emacs
-
-h2. Ruby Mode
-
-For Ruby development
-"Doc":http://www.emacswiki.org/emacs/RubyMode
-
-h2. Yasnippet
-
-Textmake like snippets
-"Doc":http://www.emacswiki.org/emacs/Yasnippet
-"Video":http://www.youtube.com/watch?v=18xYbPCJOho
-
-h2. Tabbar
-
-Buffer's tabs
-"Doc":http://www.emacswiki.org/emacs/TabBarMode
-
-h2. Haml Mode
-
-For Haml views
-"Doc":http://www.emacswiki.org/emacs/HamlMode
-
-h2. Textile Mode
-
-For Textile documents
-"Doc":http://www.emacswiki.org/emacs/TextileMode
-
-h1. Customizations
-
-h2. pt-BR spell checker
-
-"Doc":http://permalink.gmane.org/gmane.comp.tex.brazilian/12694
-
-h2. Keyboard shortcuts
-
-Fallowing common editors (C-z: undo, C-s: save, etc)
-
-h2. Right scroll
-
-h2. Truncate lines
-
-h2. Line number
+My Emacs configs with extensions and customizations.
